--- a/src/packages/GridSlider/src/GridSlider.module.scss
+++ b/src/packages/GridSlider/src/GridSlider.module.scss
@@ -1,10 +1,17 @@
 @import "../../../sass/config/colors";
 
-.cities{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    li:first-child{
-        grid-row-end: span 2;
-        background: lightblue;
-    }
+.cities {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  width: 200%;
+  gap: var(--space);
+  li:first-child {
+    grid-row-end: span 2;
+    background: lightblue;
+  }
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 }
