--- a/src/packages/GridSlider/src/GridSlider.module.scss
+++ b/src/packages/GridSlider/src/GridSlider.module.scss
@@ -5,6 +5,10 @@
   grid-template-columns: repeat(6, 1fr);
   width: 200%;
   gap: var(--space);
+  ul {
+    position: relative;
+    right: 0;
+  }
   li:first-child {
     grid-row-end: span 2;
     background: lightblue;
@@ -14,4 +18,16 @@
     width: 100%;
     height: 100%;
   }
+}
+.cities_slider_wrap button {
+  display: block;
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  border-radius: 50px;
+  border: none;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translate(-50%, -50%);
 }
