--- a/src/components/atoms/grid-slider/GridSlider.module.scss
+++ b/src/components/atoms/grid-slider/GridSlider.module.scss
@@ -12,6 +12,12 @@
       background: lightblue;
     }
   }
+  .down-arrow {
+    display: inline-block;
+    img {
+      width: 24px;
+    }
+  }
 
   img {
     object-fit: cover;
@@ -22,25 +28,16 @@
     color: #fff;
     text-align: center;
     position: absolute;
+    padding-bottom: var(--space-md);
     bottom: 0;
     left: 0;
     width: 100%;
-    background: -moz-linear-gradient(
-      top,
-      rgba(0, 0, 0, 0.65) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ); /* FF3.6-15 */
-    background: -webkit-linear-gradient(
-      top,
-      rgba(0, 0, 0, 0.65) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0.65) 0%,
       rgba(0, 0, 0, 0) 100%
-    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
 
     a {
       color: #fff;
@@ -66,7 +63,14 @@
     transform: translate(-50%, -50%);
     top: 50%;
     transition: opacity 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16));
+    img {
+      width: var(--space-unit);
+    }
 
     &.active {
       animation: 1s fadeIn;
@@ -84,6 +88,9 @@
   }
   .prev_slide {
     left: 40px;
+    img {
+      transform: rotate(180deg);
+    }
   }
 }
 
@@ -104,24 +111,3 @@
     visibility: hidden;
   }
 }
-// @mixin fadeInOut($fadeIn: true) {
-//   @if $fadeIn {
-//     @keyframes fadeIn {
-//       99% {
-//         visibility: hidden;
-//       }
-//       100% {
-//         visibility: visible;
-//       }
-//     }
-//   } @else {
-//     @keyframes fadeOut {
-//       99% {
-//         visibility: visible;
-//       }
-//       100% {
-//         visibility: hidden;
-//       }
-//     }
-//   }
-// }
