--- a/src/assets/styles/config/_typography.scss
+++ b/src/assets/styles/config/_typography.scss
@@ -14,8 +14,13 @@ $regularSize: 16;
 $h1: 18px;
 $h2: 16px;
 $h3: 14px;
+$h4: 24px;
+
+h4 {
+  font-size: $h4;
+}
 
 // ----------------------------------------------------------------------
 // Font Families
 // ----------------------------------------------------------------------
-$font-family: 'Avenir Next';
+$font-family: "Avenir Next";
