integrate google map, added footer component

--- a/src/assets/styles/config/_typography.scss
+++ b/src/assets/styles/config/_typography.scss
@@ -11,15 +11,21 @@ $maxWidth: 1280;
 // Font Sizes
 // ----------------------------------------------------------------------
 $regularSize: 16;
-$h1: 18px;
-$h2: 16px;
-$h3: 14px;
-$h4: 24px;
+$h1: 24px;
+$h2: 18px;
+$h3: 16px;
+$h4: 14px;
 
 h4 {
   font-size: $h4;
 }
-
+h3 {
+  font-size: $h3;
+  font-weight: 600;
+}
+h2 {
+  font-size: $h2;
+}
 // ----------------------------------------------------------------------
 // Font Families
 // ----------------------------------------------------------------------
