--- a/src/assets/styles/config/_colors.scss
+++ b/src/assets/styles/config/_colors.scss
@@ -4,6 +4,7 @@ $color-primary-light: #d2592c;
 $color-primary-lighter: #f8f2f0;
 $color-secondary: #e6a87a;
 $color-secondary-dark: #9c5633;
+$color-tertiary: #332e2b;
 $color-dark: #333333;
 $color-white: #ffffff;
 $color-light: #f2efed;
