--- a/src/assets/styles/config/_typography.scss
+++ b/src/assets/styles/config/_typography.scss
@@ -16,14 +16,14 @@ $h2: 18px;
 $h3: 16px;
 $h4: 14px;
 
-h4 {
+h4.h4 {
   font-size: $h4;
 }
-h3 {
+h3.h3 {
   font-size: $h3;
   font-weight: 600;
 }
-h2 {
+h2.h2 {
   font-size: $h2;
 }
 // ----------------------------------------------------------------------
