landing page design and nextjs compatible sb

--- a/src/components/atoms/grid-slider/GridSlider.module.scss
+++ b/src/components/atoms/grid-slider/GridSlider.module.scss
@@ -47,6 +47,8 @@
 
 .cities_slider_wrap {
   position: relative;
+  width: 100%;
+  overflow: hidden;
   ul {
     position: relative;
     right: 0;
