--- a/src/components/atoms/header/header.module.scss
+++ b/src/components/atoms/header/header.module.scss
@@ -1,11 +1,13 @@
 @import "../../../assets/styles/config/colors";
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background: #fff;
   box-shadow: 0px 3px 3px #e9e9e9;
   padding: var(--space) 0;
+  & > div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
   .menu {
     display: flex;
     align-items: center;
